compiler/typ/tests/fixtures/diagnostics/0080_core_if_condition_non_bool_07.ml.infer.expected
File "0080_core_if_condition_non_bool_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0080_core_if_condition_non_bool_07 is not a valid module name.

File "0080_core_if_condition_non_bool_07.ml", line 1, characters 11-12:
1 | let _ = if 6 then 7 else 8
               ^
Error: The constant 6 has type int but an expression was expected of type
         bool
       because it is in the condition of an if-statement
