compiler/typ/tests/fixtures/diagnostics/0080_core_if_condition_non_bool_07.ml
let _ = if 6 then 7 else 8
